# blit-server

./: .gitignore  Dockerfile  README.md  bing.py  check-korean.py  docker-compose.yml  example.env  manage.py  ocr-test.py  pyproject.toml  requirements.txt  web.env
config/: asgi.py  settings.py  urls.py  wsgi.py
image/: models.py  serializers.py  test.py  urls.py  views.py
image/migrations/: 0001_initial.py  0002_initial.py  0003_tag_image_tag.py
meeting/: admin.py  apps.py  models.py  permissions.py  serializers.py  text2img.py  urls.py  views.py
meeting/migrations/: 0001_initial.py  0002_alter_meeting_attendants_alter_meeting_meeting_code.py  0002_alter_meeting_attendants_alter_round_attendants.py  0003_meeting_is_active.py
nginx/: default.conf  nginx.conf
npta/: asgi.py  settings.py  urls.py  wsgi.py
ocr/: ocrmodel.py  urls.py  views.py
pay/: models.py  urls.py  views.py
postman/: Blit Collection.postman_collection.json
receipt/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
receipt/migrations/: 0001_initial.py  0002_receipt_raw_data.py
user/: models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_is_deleted.py  0002_user_kakao_pay_code.py  0003_user_kakao_name.py
web/: urls.py  views.py
web/templates/: invite.html  login.html  meeting.html  pay.html
