[tool.poetry]
name = "blit-server"
version = "0.1.0"
description = ""
authors = ["devMuromi <devmuromi@gmail.com>"]
readme = "README.md"
packages = [{include = "blit-server"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-rest-framework = "^0.1.0"
pillow = "^9.4.0"
black = "^23.1.0"
djangorestframework-simplejwt = "^5.2.2"
requests = "^2.30.0"
matplotlib = "^3.7.1"
gunicorn = "^20.1.0"
django-environ = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
